environments/dev/argocd/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway	
      name: internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - argocd.internal.dev.varda.ag
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''	
          kind: Service	
          name: argocd-server
          port: 80
          weight: 1
